update GeoServer to 2.8.2, make GS version configurable and optimise JVM options
--server: enables the server JIT compiler--Xms1G -Xmx1G: sets the JVM use two gigabytes of memory--XX:+UseParallelOldGC -XX:+UseParallelGC: enables multi-threaded garbage collections, useful if you have more than two cores--XX:NewRatio=2: informs the JVM there will be a high number of short lived objects--XX:+AggressiveOpts: enable experimental optimisations that will be defaults in future versions of the JVM